2011-06-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfih/wm/ext/match-window.jl
	* themes/StyleTab/theme.jl
	* lisp/sawfish/wm/animation/main.jl
	* lisp/sawfish/wm/viewport.jl: use 'range widget where appropriate

	* lisp/sawfish/wm/cfg/widgets/frame-style.jl: simplified 'frame-style
	widget a bit

2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets/image.jl: improved loading of preview-image
	-- Lucas Pandolfo

	* lisp/sawfish/cfg/layout/keymaps.jl: ported selector for choosing
	keymap in SawfishConig to GtkComboBoxText

	* lisp/sawfish/gtk/widget.jl: added range widget. number-widget using
	GtkScale instead of GtkSpinButton

	* lisp/sawfish/wm/edge/conf.jl: use 'range widget

2011-06-11  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/widgets/workspace-geometry.jl: removed, unused

	* lisp/sawfish/wm/misc.jl: add call-with-pointer-grabbed

	* lisp/sawfish/wm/util/keymap.jl: read-event does now grab the pointer
	instead of keyboard, fixes setting mouse or mixed mouse-keyboard
	bindings from SawfishConfig (keyboard-only bindings still work)

	* lisp/sawfish/cfg/layouts/keymap.jl: removed beautify-keymap-name,
	use beautify-symbol-name instead

	* po/sawfish-xgettext: use beautify-symbol-name from rep.util.misc,
	removed own beautify-symbol-name/beautify-keymap-name

	* lisp/sawfish/cfg/widgets/frame-style.jl: shut-up a compiler-warning

	* lisp/sawfish/cfg/widgets/frame-style.jl
	* lisp/sawfish/gtk/widget.jl: properly loop through the list of
	options when filling GtkComboBoxText widgets

	* lisp/sawfish/cfg/widgets/match-window.jl: don't make scheme-boolean
	an optional widget

	* lisp/sawfish/gtk/widgets/scheme-boolean.jl: use GtkCheckButton
	instead of GtkToggleButton. Set intial and clear states to
	`inconsistent' and only return #t or #f it not `inconsistent'.
	Properly implements scheme-boolean in Window-Rules

	* lisp/sawfish/cfg/shell.jl: added apply-gtk-style-properties.